--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -9,6 +9,7 @@
 @import '~bootstrap/scss/bootstrap';
 @import '~admin-lte/dist/css/adminlte.css';
 @import '~datatables.net-bs4/css/dataTables.bootstrap4.min.css';
+@import "~bootstrap-select/sass/bootstrap-select.scss";
 
 
 // FontAwesome
